# openmc_source_plotter

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci_with_install.yml  lint.yaml
examples/: example_gamma_spec_plot.py  example_get_particle_data.py  example_plot_direction_from_initial_source.py  example_plot_energy_from_initial_source.py  example_plot_plasma_source_position.py  example_plot_position_from_initial_plasma_source.py  example_plot_position_from_initial_source.py  example_plot_projected_position_from_initial_source.py  example_plot_source_direction.py  example_plot_source_energy.py  example_plot_source_position.py  example_plot_two_source_energies.py
openmc_source_plotter/: __init__.py  _version.py  core.py  material.py  utils.py
src/openmc_source_plotter/: __init__.py  _version.py  core.py  material.py
tests/: test_core.py  test_core_with_model.py  test_core_with_settings.py  test_core_with_source.py  test_get_particle_data.py  test_utils.py
